WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55864
[GTK] Fix compilation warnings after
r80429
https://bugs.webkit.org/show_bug.cgi?id=55864
Summary
[GTK] Fix compilation warnings after r80429
Alejandro G. Castro
Reported
2011-03-07 02:12:51 PST
Added these two warnings in that commit: ../../Source/WebCore/platform/gtk/WidgetGtk.cpp:44:19: warning: ‘WebCore::lastSetCursor’ defined but not used ../../Source/WebCore/platform/gtk/WidgetGtk.cpp:63:19: warning: ‘GdkWindow* WebCore::gdkWindow(GtkWidget*)’ defined but not used
Attachments
Proposed patch
(1.22 KB, patch)
2011-03-07 02:14 PST
,
Alejandro G. Castro
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2011-03-07 02:14:33 PST
Created
attachment 84928
[details]
Proposed patch
Martin Robinson
Comment 2
2011-03-07 09:18:03 PST
Comment on
attachment 84928
[details]
Proposed patch Thanks for cleaning up my mess!
Alejandro G. Castro
Comment 3
2011-03-08 00:45:50 PST
Landed
http://trac.webkit.org/changeset/80548
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug