2011-03-08  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Fix compilation warnings after r80429
        https://bugs.webkit.org/show_bug.cgi?id=55864

        * platform/gtk/WidgetGtk.cpp:

Canonical link: https://commits.webkit.org/70442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80548 268f45cc-cd09-0410-ab3c-d52691b4dbfc